Fixed Mobile View Height On Mobile

--- a/sass/partials/_media-queries.scss
+++ b/sass/partials/_media-queries.scss
@@ -617,7 +617,7 @@
         height: 183px;
     }
 
-    html {
-        overflow: hidden;
+    header {
+        height: 90vh;
     }
 }
